--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sipes Remodeling</title>
+    <title>Sipes Remodeling | Home Remodeling in SW Florida</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -11,29 +11,57 @@
         <img src="logo.png" alt="Sipes Remodeling Logo" class="logo">
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#services">Services</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="#blog">Blog</a></li>
+                <li><a href="#qa">Q&A</a></li>
+                <li><a href="#testimonials">Testimonials</a></li>
+                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
+
     <main>
-        <section class="intro">
-            <h1>Welcome to Sipes Remodeling</h1>
-            <p>Your trusted partner for home remodeling and renovation.</p>
+        <section id="home" class="hero">
+            <img src="logo.png" alt="Sipes Remodeling Logo" class="logo">
+            <h2>Transform Your Home with Sipes Remodeling</h2>
+            <p>High-quality craftsmanship and personalized service.</p>
+            <a href="#contact" class="cta">Get a Free Quote</a>
         </section>
-        <section class="services">
-            <h2>Our Services</h2>
-            <p>We offer a wide range of remodeling services to meet your needs.</p>
+
+        <section id="about">
+            <h2>About Us</h2>
+            <p>SW Florida's trusted professionals dedicated to enhancing your home with vibrant and quality renovations.</p>
         </section>
-        <section class="testimonials">
-            <h2>Testimonials</h2>
-            <p>Read what our satisfied customers have to say.</p>
+
+        <section id="blog">
+            <h2>Our Blog</h2>
+            <p>Exciting remodeling tips and local project stories coming soon!</p>
+        </section>
+
+        <section id="qa">
+            <h2>Frequently Asked Questions</h2>
+            <details>
+                <summary>What remodeling services do you provide?</summary>
+                <p>Kitchens, bathrooms, home additions, and more—tailored to your unique style.</p>
+            </details>
+            <details>
+                <summary>Are consultations free?</summary>
+                <p>Yes! Schedule your free consultation today.</p>
+            </details>
+        </section>
+
+        <section id="testimonials">
+            <h2>Happy Clients</h2>
+            <blockquote>"Sipes Remodeling brought vibrant energy to our home. We love it!" - Mia K.</blockquote>
+            <blockquote>"Amazing attention to detail and fantastic results!" - Carlos T.</blockquote>
         </section>
     </main>
+
     <footer>
-        <p>&copy; 2025 Sipes Remodeling. All rights reserved.</p>
+        © 2025 Sipes Remodeling | SW Florida
     </footer>
 </body>
 </html>
