--- a/index.html
+++ b/index.html
@@ -59,6 +59,25 @@
             <blockquote>"Amazing attention to detail and fantastic results!" - Carlos T.</blockquote>
         </section>
     </main>
+<section id="portfolio">
+    <h2>Our Portfolio</h2>
+    <p>Check out our recent projects below:</p>
+    <!-- Add your project images and descriptions here -->
+</section>
+
+<section id="contact">
+    <h2>Contact Us</h2>
+    <p>Address: Sarasota, SW Florida<br>
+    Phone: 941-250-5743<br>
+    Email: <a href="mailto:info@sipesremodeling.com">info@sipesremodeling.com</a></p>
+
+    <form name="contact" method="POST" data-netlify="true">
+        <input type="text" name="name" placeholder="Your Name" required>
+        <input type="email" name="email" placeholder="Your Email" required>
+        <textarea name="message" placeholder="Your Message" required></textarea>
+        <button type="submit">Send Message</button>
+    </form>
+</section>
 
     <footer>
         © 2025 Sipes Remodeling | SW Florida
